Fix ad spacing

--- a/src/scss/kyom/components/_ads.scss
+++ b/src/scss/kyom/components/_ads.scss
@@ -11,3 +11,7 @@
 		max-width: 100%;
 	}
 }
+
+.entry-content .autors-widget {
+	margin: 3em 0;
+}
